@@ -1,3 +1,9 @@
+2003-06-17  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* generic/tclCmdMZ.c:
+	* tests/regexp.test: fixing of bugs related to regexp and regsub
+	matching of empty strings.  Addition of a number of new tests.
+
 2003-06-10  Miguel Sofer <msofer@users.sf.net>
 
 	* generic/tclBasic.c:
